force-app/main/default/objects/Account_Stage__c/Account_Stage__c.object-meta.xml
<CustomObject>
    <label>Account Stage</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Account Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Stage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>