force-app/main/default/objects/Account_Stage__c/fields/Account_Move_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Move_Reason__c</fullName>
    <description>SAL25-608 - Account Move Reason</description>
    <inlineHelpText>https://docs.google.com/presentation/d/1mJEEGVSF_ZO8FV_gm6KWQ6NTb_Oje88v2fSbwwBuLik/edit#slide=id.g19037d2e96d_0_42</inlineHelpText>
    <label>Account Move Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNA (Do Not Assign)</fullName>
            </value>
            <value>
                <fullName>Channel Reassignment</fullName>
            </value>
            <value>
                <fullName>Optimization within RD</fullName>
            </value>
            <value>
                <fullName>Optimization within RVP</fullName>
            </value>
            <value>
                <fullName>Placeholder Correction</fullName>
            </value>
            <value>
                <fullName>Segment Creation</fullName>
            </value>
            <value>
                <fullName>Segment Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>