force-app/main/default/objects/Account_Stage__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>JobId</label>
    <referenceTo>ETMStage_Monitoring__c</referenceTo>
    <relationshipLabel>Account Stage</relationshipLabel>
    <relationshipName>Account_Stage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>