force-app/main/default/objects/Account_Stage__c/fields/Operations_Request__c.field-meta.xml
<CustomField>
    <fullName>Operations_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL26-323 Field is created to capture Operation Request Id while creating account stage record from operation request trigger</description>
    <label>Operations Request</label>
    <referenceTo>Operations_Request__c</referenceTo>
    <relationshipLabel>Account Stage</relationshipLabel>
    <relationshipName>Account_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>