force-app/main/default/objects/Account_Stage__c/fields/SQL_Operation__c.field-meta.xml
<CustomField>
    <fullName>SQL_Operation__c</fullName>
    <description>Captures add/update/delete scenario from adaptive system</description>
    <label>(Deprecated) SQL Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>