force-app/main/default/objects/Account_Stage__c/fields/Territory_Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Territory_Structure_Type__c</fullName>
    <description>created for PL26-5</description>
    <label>Territory Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>PLS SaaS</fullName>
            </value>
            <value>
                <fullName>PLS Cloud</fullName>
            </value>
            <value>
                <fullName>PLS NCD</fullName>
            </value>
            <value>
                <fullName>PLS NAS</fullName>
                <isActive>false</isActive>
                <label>PLS NAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>