force-app/main/default/objects/Account_Stage__c/fields/TerritoryAdaptive_Id__c.field-meta.xml
<CustomField>
    <fullName>TerritoryAdaptive_Id__c</fullName>
    <label>TerritoryAdaptive Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>